# SimpleSS

./: CMakeLists.txt  LICENSE  example.simss  example.sss  test.css
dev/: main.cpp
include/SimpleSS/: Result.hpp  SimpleSS.hpp  StyleSheet.hpp  Value.hpp
include/SimpleSS/priv/: Lexer.hpp  Parser.hpp
src/: Lexer.cpp  Parser.cpp  StyleSheet.cpp
